[package]
name = "agentctl-modelgateway"
version = "0.1.0"
description = "agentctl ModelGateway (RFC 0012): the credential-injecting, metering, budget-enforcing inference proxy for the intelligence plane. Networkless agents hold NO provider secrets; this gateway injects the ModelPool's credential, meters token usage, and enforces the pool budget. Hand-rolled in Rust (axum). agentctl is Rust-only."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agentctl-modelgateway"
path = "src/main.rs"

[dependencies]
axum = "0.8"
# kube client to read the ModelPool CRD + the provider-credential Secret.
# rustls/ring → no aws-lc-rs, no C toolchain.
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
# HTTP client for the gateway→provider hop. No tls feature → pure Rust
# (in-cluster the provider endpoint is plain HTTP; TLS is later hardening).
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# The ModelPool CRD type (agents.x-k8s.io/v1alpha1).
agent-api = { path = "../agent-api" }
# Durable usage meter. NoTls in-cluster → pure Rust, no C toolchain.
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
