[package]
name = "agentctl-modelgateway"
version = "0.1.0"
description = "agentctl ModelGateway (RFC 0012): the credential-injecting, metering, budget-enforcing inference proxy for the intelligence plane. Networkless agents hold NO provider secrets; this gateway injects the ModelPool's credential, meters token usage, and enforces the pool budget. Hand-rolled in Rust (axum). agentctl is Rust-only."
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "agentctl-modelgateway"
path = "src/main.rs"

[dependencies]
axum = "0.8"
# kube client to read the ModelPool CRD + the provider-credential Secret.
# rustls/ring → no aws-lc-rs, no C toolchain.
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
# HTTP client for the gateway→provider hop. No tls feature → pure Rust
# (in-cluster the provider endpoint is plain HTTP; TLS is later hardening).
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# The ModelPool CRD type (agents.x-k8s.io/v1alpha1).
agent-api = { path = "../agent-api" }
# Durable usage meter. sslmode=disable → NoTls (default); when the DSN asks for
# TLS (sslmode=require, e.g. bundled postgres.tls.enabled) the store wraps the hop
# with tokio-postgres-rustls. Both pure Rust, no C toolchain.
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
# TLS connector + rustls (ring provider) for the Postgres hop. default-features
# off + `ring` → no aws-lc-rs, no C toolchain.
tokio-postgres-rustls = { version = "0.14", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
serde_json.workspace = true
tracing = "0.1"
# Shared tracing init: fmt-only by default, OTLP export when
# OTEL_EXPORTER_OTLP_ENDPOINT is set.
agentctl-telemetry = { path = "../agentctl-telemetry" }
