[package]
name = "agentctl-node-agent"
version = "0.1.0"
description = "agentctl node-agent (RFC 0008). Tier A control bridge: speaks the management profile to a local agent over a unix socket. (Async tiers + discovery added next.)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "node-agent"
path = "src/bin/node-agent.rs"

[dependencies]
agent-contract-client = { path = "../agent-contract-client" }
serde.workspace = true
serde_json.workspace = true
# The node-agent binary serves a small HTTP API (RFC 0009 backend) for the
# aggregated apiserver to call; the ManagementClient itself stays blocking std.
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
# SSE bridge: adapt the blocking-task mpsc receiver into a `Stream` for axum's
# `Sse` response (the A2A `message/stream` relay, RFC 0020).
tokio-stream = "0.1"
