[package]
name = "agentctl-node-agent"
version = "0.1.0"
description = "agentctl node-agent (RFC 0008). Tier A control bridge: speaks the management profile to a local agent over a unix socket. (Async tiers + discovery added next.)"
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "node-agent"
path = "src/bin/node-agent.rs"

[dependencies]
agent-contract-client = { path = "../agent-contract-client" }
serde.workspace = true
serde_json.workspace = true
# Tracing + shared init: the management bridge is instrumented and continues the
# apiserver's trace (W3C `traceparent`). fmt-only by default; OTLP export when
# OTEL_EXPORTER_OTLP_ENDPOINT is set.
tracing = "0.1"
agentctl-telemetry = { path = "../agentctl-telemetry" }
# The node-agent binary serves a small HTTP API (RFC 0009 backend) for the
# aggregated apiserver to call; the ManagementClient itself stays blocking std.
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
# SSE bridge: adapt the blocking-task mpsc receiver into a `Stream` for axum's
# `Sse` response (the A2A `message/stream` relay, RFC 0020).
tokio-stream = "0.1"
# mTLS control surface (RFC 0015): the :8443 listener presents the node-agent's
# serving cert and REQUIRES a CA-signed client cert, so only the control plane
# (apiserver, gateway) can drive the control verbs. rustls with the ring provider
# (no aws-lc-rs → no C toolchain); mirror the apiserver's ServerConfig.
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# SO_PEERCRED pod→socket attestation (RFC 0002 §7 / RFC 0015): std's
# UnixStream::peer_cred is still nightly-only (peer_credentials_unix_socket), so
# we read the kernel-attested peer pid via getsockopt(SO_PEERCRED) ourselves.
libc = "0.2"
# Infer-proxy (RFC 0012): the node-agent→ModelGateway forward hop for the
# networkless/Kata tier. In-cluster the ModelGateway is plain HTTP, so
# default-features off → NO default-tls → pure Rust, no C toolchain (and no
# crypto provider that would clash with the binary's ring install). `stream`
# enables `Response::bytes_stream` so streaming/SSE completions pipe straight
# back to the agent.
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
