[package]
name = "agentctl-operator"
version = "1.3.0"
description = "agentctl operator: reconciles Agent/AgentFleet into workloads. Holds the pure rendering core plus the kube runtime controller that drives reconciliation."
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "agentctl-operator"
path = "src/bin/operator.rs"

[dependencies]
agent-api = { path = "../agent-api" }
# Shared tracing init: fmt layer (default) + OTLP export when
# OTEL_EXPORTER_OTLP_ENDPOINT is set.
agentctl-telemetry = { path = "../agentctl-telemetry" }
# Default features keep the client (rustls + config); `runtime` adds the
# Controller/watcher/finalizer, `derive` the CR typing the controller watches.
kube = { version = "4", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
serde.workspace = true
serde_json.workspace = true
# Health/metrics surface: the same axum stack the other control-plane services serve
# /healthz + /metrics with — no second HTTP/metrics framework.
axum = "0.8"
# AAuth house-provisioning (RFC 0023): the Agent Provider admin client
# (allowlist pre-registration / identity learning / revocation) + per-Agent
# Ed25519 key material. reqwest is handed a fully-built ring `ClientConfig`
# via `use_preconfigured_tls` (webpki roots) — never aws-lc-rs, no C toolchain,
# matching the gateway's client pattern.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-manual-roots-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
webpki-roots = "1"
# Ed25519 seed generation + RFC 7638 thumbprints (SHA-256) — the same ring the
# rustls stack already links.
ring = "0.17"

[dev-dependencies]
serde_json.workspace = true
# Drive the axum health/metrics router in unit tests (ServiceExt::oneshot).
tower = { version = "0.5", features = ["util"] }
