# SPDX-License-Identifier: BUSL-1.1
[package]
name = "agentctl-scaler"
version = "1.3.0"
description = "agentctl KEDA external gRPC scaler: serves KEDA's externalscaler.proto over the coordination server's off-pod backlog so claim-mode AgentFleets scale from zero. Rust (tonic + axum)."
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "agentctl-scaler"
path = "src/main.rs"

[dependencies]
# gRPC server for KEDA's externalscaler.proto. Default features (router/transport/
# codegen) — NO `tls-*` feature, so no aws-lc-rs/openssl is pulled (plaintext in
# the cluster network, matching the coordination server's HTTP surface).
tonic = "0.14"
# prost codec runtime for the generated messages (tonic 0.14 split this out).
tonic-prost = "0.14"
prost = "0.14"
# `ReceiverStream` adapter for the StreamIsActive server-streaming response.
tokio-stream = "0.1"
# Health/readiness/metrics HTTP surface — same axum version the other binaries serve.
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "net", "sync"] }
serde_json.workspace = true
# HTTP client for the coordination-server MCP hop. default-features off, NO
# native-tls → no openssl/aws-lc, no C toolchain. `rustls-tls-manual-roots-no-provider`
# enables `use_preconfigured_tls` WITHOUT pulling a default crypto provider (no
# aws-lc-rs); we hand it a ring-backed ClientConfig for the optional client-cert
# (mTLS) hop (see src/client.rs). Same reqwest wiring the gateway uses.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-manual-roots-no-provider",
] }
# rustls (ring provider) for the optional mTLS ClientConfig presenting the scaler's
# client identity to the coordination server. ring, never aws-lc-rs → no C toolchain.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# Parse the mounted client cert / key / CA PEMs. Pure Rust, no C toolchain.
rustls-pemfile = "2"
tracing = "0.1"
# Shared tracing init: fmt-only by default, OTLP export when
# OTEL_EXPORTER_OTLP_ENDPOINT is set (matches every other control-plane binary).
agentctl-telemetry = { path = "../agentctl-telemetry" }

[build-dependencies]
# tonic 0.14 prost codegen (bundles tonic-build + prost-build); drives the system
# protoc at /usr/bin/protoc. Server-only (build.rs sets build_client(false)).
tonic-prost-build = "0.14"
