[package]
name = "mock-agent"
version = "1.1.0"
description = "A minimal CONFORMANT-AGENT stand-in (contract 1.0): serves the management + A2A self-MCP over mTLS HTTPS POST /mcp (client cert = Management) and a plaintext /readyz+/metrics listener. A dev/e2e/conformance fixture — not a real agent (no agentic loop). Proves agentctl is agent-agnostic (P0)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mock-agent"
path = "src/main.rs"

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde_json.workspace = true

[dev-dependencies]
# Prove the emitted manifest is contract-1.0-valid with the real typed client
# (the same oracle the conformance fixtures use).
agent-contract-client = { path = "../agent-contract-client" }
